tests/fixtures/invalid/pow_float_none_set.py
# Cannot call pow() with Float, None, Set[int]
x = pow(1.0, None, {1, 2, 3})
